Added modifications to scss files for site responsiveness as well as significant additions to the site's bio section's styles.

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -32,10 +32,10 @@
 
         <!-- About: Band Member Img by Matthew Kalapuch on Unsplash -->
         <section class="bio">
-            <div class="bio__wrapper--header">
+            <div class="bio__header-wrapper">
                 <h1 class="bio__header">About the Musicians</h1>
             </div>
-            <div class="bio__wrapper--content">
+            <div class="bio__article-wrapper">
                 <img class="bio__band-img" src="./assets/Images/band-members.jpg" alt="A photo of Gaspard and Xavier's band">
 
                 <div class="bio__quote">
@@ -43,13 +43,15 @@
                 </div>
                 <div class="bio__quote-speaker">- Xavier de Rosnay</div>
                 <div class="bio__sub-header">Xavier de Rosnay & Gaspard Augé</div>
-                <p class="bio__text">
-                    Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+                <div class="bio__paragraph-wrapper">
+                    <p class="bio__text">
+                        Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
 
-                </p>
-                <p class="bio__text">
-                    Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
-                </p>
+                    </p>
+                    <p class="bio__text">
+                        Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
