--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -54,6 +54,24 @@
                 </div>
             </div>
         </section>
+
+        <!-- Photo Gallery -->
+        <section class="gallery">
+            <div class="gallery__wrapper">
+                <h1 class="gallery__header">Photo Gallery</h1>
+                <div class="gallery__photo-wrapper">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-1.jpg" alt="Photo 1">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-2.jpg" alt="Photo 2">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-3.jpg" alt="Photo 3">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-4.jpg" alt="Photo 4">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-5.jpg" alt="Photo 5">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-6.jpg" alt="Photo 6">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-7.jpg" alt="Photo 7">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-8.jpg" alt="Photo 8">
+                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-9.jpg" alt="Photo 9">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
