Finalized Photo Gallery Section styles with help from Kevin (Thanks Kevin! :D)

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -72,6 +72,11 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            
+        </footer>
     </main>
 </body>
 </html>
