Added Footer section html

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -75,7 +75,60 @@
 
         <!-- Footer -->
         <footer class="footer">
-            
+            <div class="footer__wrapper">
+                <div class="footer__nav">
+                    <div class="footer__intro">
+                        <h1 class="footer__title">Get in touch</h1>
+                        <div class="footer__socials">
+                            <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram logo">
+                            <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook logo">
+                            <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter logo">
+                        </div>
+                    </div>
+                    <img class="footer__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo">
+                </div>
+
+                <div class="footer__directory">
+                    <div class="footer__contact">
+                        <div class="footer__contact-title">
+                            <span>Richard Rovner</span>
+                            <span>The Bees Knees Management</span>
+                        </div>
+                        <div class="footer__contact-info">
+                            <span>460 King Street West
+                                Toronto, Ontario M5V 1L7
+                            </span>
+                            <span>info@thebeesknees.com</span>
+                        </div>
+                    </div>
+
+                    <div class="footer__contact">
+                        <div class="footer__contact-title">
+                            <span>Marsha Vlasic</span>
+                            <span>Artist Group International</span>
+                        </div>
+                        <div class="footer__contact-info">
+                            <span>Booking Agent for US/South America/Japan
+                            </span>
+                            <span>marsha.vlasic@artistgrp.com</span>
+                        </div>
+                    </div>
+
+                    <div class="footer__contact">
+                        <div class="footer__contact-title">
+                            <span>Russel Warby</span>
+                            <span>William Morrir Entertainment</span>
+                        </div>
+                        <div class="footer__contact-info">
+                            <span>Booking Agent for UK/EU/AU
+                            </span>
+                            <span>RLW@wmeentertainment.com</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="copyright">Copyright The Bees Knees &copy; 2018 All Rights Reserved</div>
+            </div>
         </footer>
     </main>
 </body>
