Touched up Photo Gallery responsiveness again

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -80,9 +80,9 @@
                     <div class="footer__intro">
                         <h1 class="footer__title">Get in touch</h1>
                         <div class="footer__socials">
-                            <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram logo">
-                            <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook logo">
-                            <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter logo">
+                            <img class="footer__social-icon" src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram logo">
+                            <img class="footer__social-icon" src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook logo">
+                            <img class="footer__social-icon" src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter logo">
                         </div>
                     </div>
                     <img class="footer__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo">
@@ -91,43 +91,43 @@
                 <div class="footer__directory">
                     <div class="footer__contact">
                         <div class="footer__contact-title">
-                            <span>Richard Rovner</span>
-                            <span>The Bees Knees Management</span>
+                            <div>Richard Rovner</div>
+                            <div>The Bees Knees Management</div>
                         </div>
                         <div class="footer__contact-info">
-                            <span>460 King Street West
+                            <div class="footer__contact-info">460 King Street West
                                 Toronto, Ontario M5V 1L7
-                            </span>
-                            <span>info@thebeesknees.com</span>
+                            </div>
+                            <div>info@thebeesknees.com</div>
                         </div>
                     </div>
 
                     <div class="footer__contact">
                         <div class="footer__contact-title">
-                            <span>Marsha Vlasic</span>
-                            <span>Artist Group International</span>
+                            <div>Marsha Vlasic</div>
+                            <div>Artist Group International</div>
                         </div>
                         <div class="footer__contact-info">
-                            <span>Booking Agent for US/South America/Japan
-                            </span>
-                            <span>marsha.vlasic@artistgrp.com</span>
+                            <div class="footer__contact-info">Booking Agent for US/South America/Japan
+                            </div>
+                            <div>marsha.vlasic@artistgrp.com</div>
                         </div>
                     </div>
 
                     <div class="footer__contact">
                         <div class="footer__contact-title">
-                            <span>Russel Warby</span>
-                            <span>William Morrir Entertainment</span>
+                            <div>Russel Warby</div>
+                            <div>William Morrir Entertainment</div>
                         </div>
                         <div class="footer__contact-info">
-                            <span>Booking Agent for UK/EU/AU
-                            </span>
-                            <span>RLW@wmeentertainment.com</span>
+                            <div class="footer__contact-info">Booking Agent for UK/EU/AU
+                            </div>
+                            <div>RLW@wmeentertainment.com</div>
                         </div>
                     </div>
                 </div>
 
-                <div class="copyright">Copyright The Bees Knees &copy; 2018 All Rights Reserved</div>
+                <div class="footer__copyright">Copyright The Bees Knees &copy; 2018 All Rights Reserved</div>
             </div>
         </footer>
     </main>
