Fixed nav section in Header.

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -12,11 +12,16 @@
 <body>
     <header class="header">
         <div class="header__wrapper">
-            <img class="header__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo">
-            <nav>
-                <ul class="header__nav">
-                    <li class="header__nav-link header__nav-link--active">Biography</li>
-                    <li class="header__nav-link">Shows</li>
+            <a href="./index.html"><img class="header__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo"></a>
+            <nav class="header__nav">
+                <ul class="header__nav-menu">
+                    <a class="header__nav-link header__nav-link--active" href="">
+                        <li class="header__nav-item">Biography</li>
+                    </a>
+
+                    <a class="header__nav-link" href="">
+                        <li class="header__nav-item header__nav-item--active">Shows</li>
+                    </a>
                 </ul>
             </nav>
         </div>
