Reviwed Footer styles. Removed redundant css.

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -125,7 +125,8 @@
                             <div>William Morrir Entertainment</div>
                         </div>
                         <div class="footer__contact-info">
-                            <div class="footer__contact-info">Booking Agent for UK/EU/AU
+                            <div>Booking Agent for </div>
+                            <div class="footer__contact-info">UK/EU/AU
                             </div>
                             <div>RLW@wmeentertainment.com</div>
                         </div>
