Finishing touches. Added some xtras.

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -15,7 +15,7 @@
             <a href="./index.html"><img class="header__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo"></a>
             <nav class="header__nav">
                 <ul class="header__nav-menu">
-                    <a class="header__nav-link header__nav-link--active" href="">
+                    <a class="header__nav-link header__nav-link--active" href="./index.html">
                         <li class="header__nav-item">Biography</li>
                     </a>
 
@@ -65,15 +65,15 @@
             <div class="gallery__wrapper">
                 <h1 class="gallery__header">Photo Gallery</h1>
                 <div class="gallery__photo-wrapper">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-1.jpg" alt="Photo 1">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-2.jpg" alt="Photo 2">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-3.jpg" alt="Photo 3">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-4.jpg" alt="Photo 4">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-5.jpg" alt="Photo 5">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-6.jpg" alt="Photo 6">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-7.jpg" alt="Photo 7">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-8.jpg" alt="Photo 8">
-                    <img class="gallery__photo" src="./assets/Images/Photo-gallery-9.jpg" alt="Photo 9">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-1.jpg" alt="Photo 1">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-2.jpg" alt="Photo 2">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-3.jpg" alt="Photo 3">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-4.jpg" alt="Photo 4">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-5.jpg" alt="Photo 5">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-6.jpg" alt="Photo 6">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-7.jpg" alt="Photo 7">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-8.jpg" alt="Photo 8">
+                    <img class="gallery__photo gallery__grayscale" src="./assets/Images/Photo-gallery-9.jpg" alt="Photo 9">
                 </div>
             </div>
         </section>
@@ -90,7 +90,7 @@
                             <img class="footer__social-icon" src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter logo">
                         </div>
                     </div>
-                    <img class="footer__logo" src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo">
+                    <a class="footer__logo" href="./index.html"><img src="./assets/Logo/Logo-bandsite.png" alt="Bandsite logo"></a>
                 </div>
 
                 <div class="footer__directory">
@@ -103,7 +103,7 @@
                             <div class="footer__contact-info">460 King Street West
                                 Toronto, Ontario M5V 1L7
                             </div>
-                            <div>info@thebeesknees.com</div>
+                            <a class="footer__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
                         </div>
                     </div>
 
@@ -115,7 +115,7 @@
                         <div class="footer__contact-info">
                             <div class="footer__contact-info">Booking Agent for US/South America/Japan
                             </div>
-                            <div>marsha.vlasic@artistgrp.com</div>
+                            <a class="footer__email" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
                         </div>
                     </div>
 
@@ -128,7 +128,7 @@
                             <div>Booking Agent for </div>
                             <div class="footer__contact-info">UK/EU/AU
                             </div>
-                            <div>RLW@wmeentertainment.com</div>
+                            <a class="footer__email" href="mailto:RLW@wmeentertainment.com<">RLW@wmeentertainment.com</a>
                         </div>
                     </div>
                 </div>
