Fixed issues with Header and Hero sizing. Did some modifications to shows.html

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -19,8 +19,8 @@
                         <li class="header__nav-item">Biography</li>
                     </a>
 
-                    <a class="header__nav-link" href="">
-                        <li class="header__nav-item header__nav-item--active">Shows</li>
+                    <a class="header__nav-link" href="./pages/shows.html">
+                        <li class="header__nav-item">Shows</li>
                     </a>
                 </ul>
             </nav>
