Modified shows.html. Began creation of js to make table for Shows page.

--- a/sprint-2/pages/shows.html
+++ b/sprint-2/pages/shows.html
@@ -28,15 +28,16 @@
     </header>
 
     <main>
-        <!-- Hero: BG Img on Unsplash -->
-        <header class="hero hero--members">
+        <!-- Hero: BG Img by Sandro Katalina on Unsplash-->
+        <header class="hero hero--shows">
             <div class="hero__wrapper">
-                <h1 class="hero__text">Waters of Nazareth x We Are your Friends x Phantom</h1>
+                <h1 class="hero__text hero__text--shows">Waters of Nazareth x We Are your Friends x Phantom</h1>
             </div>
         </header>
 
         <!-- Show Schedule -->
         <section class="shows">
+            <table></table>
         </section>
 
         <!-- Footer -->
