Updated shows sass file, imported to main sass.

--- a/sprint-2/pages/shows.html
+++ b/sprint-2/pages/shows.html
@@ -37,7 +37,10 @@
 
         <!-- Show Schedule -->
         <section class="shows">
-            <table></table>
+            <div class="shows__wrapper">
+                <h1 class="shows__header">Shows</h1>
+                <table></table>
+            </div>
         </section>
 
         <!-- Footer -->
