Shows page and table finished and styled. Functionality to run certain table making fn on window resize event to be added.

--- a/sprint-2/pages/shows.html
+++ b/sprint-2/pages/shows.html
@@ -31,7 +31,7 @@
         <!-- Hero: BG Img by Sandro Katalina on Unsplash-->
         <header class="hero hero--shows">
             <div class="hero__wrapper">
-                <h1 class="hero__text hero__text--shows">Waters of Nazareth x We Are your Friends x Phantom</h1>
+                <h1 class="hero__text hero__text--shows">Waters of Nazareth x We Are Your Friends x Phantom</h1>
             </div>
         </header>
 
