Started working on Conversation section html and styles.

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -78,6 +78,27 @@
             </div>
         </section>
 
+        <!-- Conversation Section -->
+        <section class="conversation">
+            <h1 class="conversation__header">Join the Conversation</h1>
+            <div class="conversation__wrapper">
+                <div class="conversation__form">
+                    <img class="conversation__form-avatar" src="" alt="Upload an Avatar here for your comments!">
+                    <form class="conversation__input">
+                        <div class="conversation__field">
+                            <label class ="conversation__field-header" for="name">Name</label>
+                            <input type="text" id="name" name="name">
+                        </div>
+                        <div class="conversation__field">
+                            <label class ="conversation__field-header" for="msg">Comment</label>
+                            <textarea id="msg" name="msg"></textarea>
+                        </div>
+                        <button class="conversation__cta">Comment</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer class="footer">
             <div class="footer__wrapper">
