--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -83,18 +83,31 @@
             <h1 class="conversation__header">Join the Conversation</h1>
             <div class="conversation__wrapper">
                 <div class="conversation__form">
-                    <img class="conversation__form-avatar" src="" alt="Upload an Avatar here for your comments!">
+                    <img class="conversation__avatar" src="" alt="Upload an Avatar here for your comments!">
                     <form class="conversation__input">
                         <div class="conversation__field">
                             <label class ="conversation__field-header" for="name">Name</label>
-                            <input type="text" id="name" name="name">
+                            <input class="conversation__fill" type="text" id="name" name="name" value="Mohan Muruge"> 
                         </div>
                         <div class="conversation__field">
                             <label class ="conversation__field-header" for="msg">Comment</label>
-                            <textarea id="msg" name="msg"></textarea>
+                            <textarea class="conversation__fill" id="msg" name="msg" rows="6">Add a new comment!</textarea>
                         </div>
                         <button class="conversation__cta">Comment</button>
                     </form>
+                </div>
+                <div class="conversation__thread">
+                    <div class="conversation__comment">
+                        <img class="conversation__avatar" src="" alt="Upload an Avatar here for your comments!">
+                        <div class="conversation__comment-text">
+                            <div class="conversation__comment-id">
+                                <div class="conversation__comment-name">Julio del Bosco</div>
+                                <div class="conversation__comment-date">10/31/2019</div>
+                            </div>
+                            <div class="conversation__comment-msg">YEET!</div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </section>
