--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -83,8 +83,8 @@
             <h1 class="conversation__header">Join the Conversation</h1>
             <div class="conversation__wrapper">
                 <div class="conversation__form">
-                    <img class="conversation__avatar" src="" alt="Upload an Avatar here for your comments!">
-                    <form class="conversation__input">
+                    <form class="conversation__input" id="conversation__input">
+                        <img class="conversation__avatar" src="" alt="Upload an Avatar here for your comments!">
                         <div class="conversation__field">
                             <label class ="conversation__field-header" for="name">Name</label>
                             <input class="conversation__fill" type="text" id="name" name="name" value="Mohan Muruge"> 
@@ -93,7 +93,7 @@
                             <label class ="conversation__field-header" for="msg">Comment</label>
                             <textarea class="conversation__fill" id="msg" name="msg" rows="6">Add a new comment!</textarea>
                         </div>
-                        <button class="conversation__cta">Comment</button>
+                        <button type="submit" class="conversation__cta">Comment</button>
                     </form>
                 </div>
                 <div class="conversation__thread">
@@ -171,5 +171,7 @@
             </div>
         </footer>
     </main>
+
+    <script src="./scripts/commentHandler.js"></script>
 </body>
 </html>
