Updated commentHandler with function to delete children in the conversation__thread div in the corresponding HTML to reload new comments on submission using code by Pankaj_singh @ geeksforgeeks.org. Will attempt recreating desired outputs using own solution.

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -85,7 +85,7 @@
                 <div class="conversation__form">
                     <form class="conversation__input" id="conversation__input">
                         <div class="conversation__avatar-wrapper">
-                            <img class="conversation__avatar" src="./assets/Images/Mohan-muruge.jpg" alt="Upload an Avatar here for your comments!">
+                            <img name ="avatar" class="conversation__avatar" src="./assets/Images/Mohan-muruge.jpg" alt="Upload an Avatar here for your comments!">
                         </div>
                         <div class="conversation__field-wrapper">
                             <div class="conversation__field">
@@ -101,19 +101,6 @@
                     </form>
                 </div>
                 <div class="conversation__thread">
-                    <div class="conversation__comment">
-                        <div class="conversation__avatar-wrapper">
-                            <img class="conversation__avatar" src="" alt="Upload an Avatar here for your comments!">
-                        </div>
-                        <div class="conversation__comment-text">
-                            <div class="conversation__comment-id">
-                                <div class="conversation__comment-name">Julio del Bosco</div>
-                                <div class="conversation__comment-date">10/31/2019</div>
-                            </div>
-                            <div class="conversation__comment-msg">YEET!</div>
-                        </div>
-                        
-                    </div>
                 </div>
             </div>
         </section>
