Replaced method for removing children of a node with method from MDN. Tried iterating over NodeList, but did not work bc the list is live.

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -90,7 +90,7 @@
                         <div class="conversation__field-wrapper">
                             <div class="conversation__field">
                                 <label class ="conversation__field-header" for="name">Name</label>
-                                <input class="conversation__fill" type="text" id="name" name="name" value="Mohan Muruge"> 
+                                <input class="conversation__fill" type="text" id="name" name="name"> 
                             </div>
                             <div class="conversation__field">
                                 <label class ="conversation__field-header" for="msg">Comment</label>
