--- a/sprint-3/index.html
+++ b/sprint-3/index.html
@@ -165,6 +165,7 @@
         </footer>
     </main>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./scripts/commentHandler.js"></script>
 </body>
 </html>
