--- a/sprint-3/pages/shows.html
+++ b/sprint-3/pages/shows.html
@@ -107,6 +107,7 @@
         </footer>
     </main>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../scripts/showsTable.js"></script>
 </body>
 </html>
