Fixed comment form placeholders.

--- a/sprint-3/index.html
+++ b/sprint-3/index.html
@@ -90,11 +90,11 @@
                         <div class="conversation__field-wrapper">
                             <div class="conversation__field">
                                 <label class ="conversation__field-header" for="name">Name</label>
-                                <input class="conversation__fill" type="text" id="name" name="name" value="Mohan Muruge"> 
+                                <input class="conversation__fill" type="text" id="name" name="name" placeholder="Mohan Muruge" value=""> 
                             </div>
                             <div class="conversation__field">
                                 <label class ="conversation__field-header" for="msg">Comment</label>
-                                <textarea class="conversation__fill" id="msg" name="comment" rows="6">Add a new comment!</textarea>
+                                <textarea class="conversation__fill" id="msg" name="comment" rows="6" placeholder="Add a new comment"></textarea>
                             </div>
                             <button type="submit" class="conversation__cta">Comment</button>
                         </div>
