--- a/sprint-3/pages/shows.html
+++ b/sprint-3/pages/shows.html
@@ -35,8 +35,7 @@
                     <h2 class="hero__text--splash">Woman Worldwide Album</h2>
                     <h1 class="hero__text hero__text--shows">Waters of Nazareth x We Are your Friends x Phantom</h1>
                 </div>
-                <iframe class="hero__soundcloud-media" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/163361495&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            </div>
+                <iframe class="hero__soundcloud-media" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/163361495&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
         </header>
 
         <!-- Show Schedule -->
