--- a/sprint-3/index.html
+++ b/sprint-3/index.html
@@ -130,7 +130,7 @@
                             <div class="footer__contact-info">460 King Street West
                                 Toronto, Ontario M5V 1L7
                             </div>
-                            <a class="footer__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+                            <a class="footer__link" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
                         </div>
                     </div>
 
@@ -142,7 +142,7 @@
                         <div class="footer__contact-info">
                             <div class="footer__contact-info">Booking Agent for US/South America/Japan
                             </div>
-                            <a class="footer__email" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
+                            <a class="footer__link" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
                         </div>
                     </div>
 
@@ -155,11 +155,12 @@
                             <div>Booking Agent for </div>
                             <div class="footer__contact-info">UK/EU/AU
                             </div>
-                            <a class="footer__email" href="mailto:RLW@wmeentertainment.com<">RLW@wmeentertainment.com</a>
+                            <a class="footer__link" href="mailto:RLW@wmeentertainment.com<">RLW@wmeentertainment.com</a>
                         </div>
                     </div>
                 </div>
 
+                <div>Icons by <a class="footer__link" target="_blank" href="https://icons8.com">Icons8</a></div>
                 <div class="footer__copyright">Copyright The Bees Knees &copy; 2018 All Rights Reserved</div>
             </div>
         </footer>
