Fixed homepage styles for tablet and desktop sizes. Bug with mobile size in comments section to do with avatar and content spacing.

--- a/sprint-3/pages/shows.html
+++ b/sprint-3/pages/shows.html
@@ -71,7 +71,7 @@
                             <div class="footer__contact-info">460 King Street West
                                 Toronto, Ontario M5V 1L7
                             </div>
-                            <a class="footer__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+                            <a class="footer__link" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
                         </div>
                     </div>
 
@@ -83,7 +83,7 @@
                         <div class="footer__contact-info">
                             <div class="footer__contact-info">Booking Agent for US/South America/Japan
                             </div>
-                            <a class="footer__email" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
+                            <a class="footer__link" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
                         </div>
                     </div>
 
@@ -96,7 +96,7 @@
                             <div>Booking Agent for </div>
                             <div class="footer__contact-info">UK/EU/AU
                             </div>
-                            <a class="footer__email" href="mailto:RLW@wmeentertainment.com<">RLW@wmeentertainment.com</a>
+                            <a class="footer__link" href="mailto:RLW@wmeentertainment.com<">RLW@wmeentertainment.com</a>
                         </div>
                     </div>
                 </div>
